--- a/css/style.css
+++ b/css/style.css
@@ -185,7 +185,7 @@
     position: absolute;
     top: 50%;
     left: 0;
-    background: var(--bs-primary);
+    background: #000;
     border-radius: 0 50px 50px 0;
     opacity: 1;
 }
@@ -201,7 +201,7 @@
     position: absolute;
     top: 50%;
     right: 0;
-    background: var(--bs-primary);
+    background: #000;
     border-radius: 50px 0 0 50px;
     opacity: 1;
 }
@@ -220,7 +220,7 @@
 }
 
 .carousel-caption .carousel-content a button.carousel-content-btn1:hover {
-    background: var(--bs-primary);
+    background: #000;
     color: #ffffff;
     border: 0;
     opacity: 1;
@@ -229,7 +229,7 @@
 }
 
 .carousel-caption .carousel-content a button.carousel-content-btn2 {
-    background: var(--bs-primary);
+    background: #000;
     color: var(--bs-white);
     opacity: 1;
     border: 0;
@@ -248,7 +248,7 @@
 #carouselId .carousel-indicators li {
     width: 30px;
     height: 10px;
-    background: var(--bs-primary);
+    background: #000;
     margin: 10px;
     border-radius: 30px;
     opacity: 1;
@@ -335,7 +335,7 @@
     top: 0;
     left: 0;
     border-radius: 10px 10px 0 0;
-    background: rgba(3, 43, 243, 0.8);
+    background: #26D48C;
     transition: .5s;
 }
 
@@ -400,7 +400,7 @@
     position: absolute;
     right: 0;
     bottom: 0;
-    background: var(--bs-primary);
+    background: #000;
     border-radius: 10px;
     opacity: 1;
     z-index: -1;
@@ -422,7 +422,7 @@
 .project-content a {
     display: inline-block;
     padding: 20px 25px;
-    background: var(--bs-primary);
+    background: #000;
     border-radius: 10px;
 }
 
@@ -480,7 +480,7 @@
 /*** Team Start ***/
 
 .team-item {
-    border-top: 30px solid var(--bs-secondary) !important;
+    border-top: 30px solid #26D48C !important;
     background: rgba(239, 239, 241, 0.8);
 }
 
@@ -490,7 +490,7 @@
     content: "";
     position: relative;
     top: -101px;
-    background: var(--bs-secondary);
+    background: #26D48C;
     clip-path: polygon(50% 50%, 100% 50%, 50% 100%, 0% 50%);
     padding: 60px;
     opacity: 1;
@@ -508,18 +508,18 @@
 }
 
 .team-img img {
-    border: 10px solid var(--bs-secondary);
+    border: 10px solid #26D48C;
     transition: .5s;
 }
 
 .team-item:hover h4 {
-    color: var(--bs-primary);
+    color: #000;
     transition: .5s;
 }
 
 .team-item:hover .team-img img {
     transform: scale(1.05);
-    border: 10px solid var(--bs-secondary);
+    border: 10px solid #26D48C;
 }
 
 .team-carousel .owl-stage {
@@ -551,7 +551,7 @@
 
 .team-carousel .owl-nav .owl-prev:hover,
 .team-carousel .owl-nav .owl-next:hover {
-    background: var(--bs-primary);
+    background: #000;
     color: var(--bs-white);
 }
 
@@ -599,7 +599,7 @@
 
 .testimonial-carousel .owl-dot.active {
     width: 30px;
-    background: var(--bs-primary);
+    background: #000;
 }
 
 .testimonial-carousel .owl-item.center {
@@ -663,4 +663,12 @@
     border: 0;
 }
 
+
+.logo{
+    height:70px;
+}
+
+.counter{
+    color:26d48c
+}
 /*** Footer End ***/
